[tool.poetry]
name = "sqlalchemy-ibmi"
version = "0.1.0"
description = "'SQLAlchemy support for IBM i db2'"
authors = ["Naveen-Ram <naveen.ram@ibm.com>"]

[tool.poetry.dependencies]
sqlalchemy = ">=1.3"
pyodbc = ">=4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
