[tool.poetry]
name = "sqlalchemy-ibmi"
version = "0.9.2"
description = "SQLAlchemy support for Db2 on IBM i"
readme = "README.md"
authors = [
    "Naveen Ram <naveen.ram@ibm.com>",
    "Kevin Adler <kadler@us.ibm.com>"
]
license = "Apache-2.0"
keywords = ["sqlalchemy", "database", "ibm", "ibmi", "db2"]
classifiers =[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends",
]
packages = [
    {include = "sqlalchemy_ibmi"}
]
include = [
    { path = "test/*", format = "sdist" },
    { path = "contributing/*", format = "sdist" },
    { path = "docs/*", format = "sdist" },
    { path = "setup.cfg", format = "sdist" },
    { path = "CHANGES", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]

[tool.poetry.plugins."sqlalchemy.dialects"]
ibmi = "sqlalchemy_ibmi.base:IBMiDb2Dialect"

[tool.poetry.dependencies]
python = ">=3.6"
sqlalchemy = ">=1.3.0, <1.4"
pyodbc = ">=4.0"

[tool.poetry.dev-dependencies]
pytest = "<5.4"
flake8 = "^3.7.9"
bumpversion = "^0.5.0"
sphinx = ">1.0.0"
sphinx-rtd-theme = ">0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0a6", "setuptools>=39.2"]
build-backend = "poetry.core.masonry.api"


