[egg_info]
tag_build =


[db]
default=db2+pyodbc://db2inst2:db2inst2@/test
sqlite=sqlite:///:memory:

[metadata]
name = sqlalchemy-ibmi
version = attr: sqlalchemy_ibmi.__version__
description = SQLAlchemy support for Db2 on IBM i
long_description = file: README.md
author = IBM
license = Apache License 2.0
keywords = sqlalchemy, database, ibm, ibmi, db2
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent
    Topic :: Databases :: Front-end, middle-tier
platforms = All

[options]
zip_safe = False
include_package_data = True
install_requires =
    sqlalchemy>=1.3
    pyodbc>=4.0
packages = sqlalchemy_ibmi

[options.entry_points]
sqlalchemy.dialects =
    ibmi = sqlalchemy_ibmi.base:IBMiDb2Dialect
